@@ -21,26 +21,25 @@ public class Day22 extends Runner.Computation {
 
     @Override
     public Object computePart1() {
-//        var player1Deck = new ArrayDeque<>(player1StartingCards);
-//        var player2Deck = new ArrayDeque<>(player2StartingCards);
-//
-//        while (!player1Deck.isEmpty() && !player2Deck.isEmpty()) {
-//            int player1Card = player1Deck.removeFirst();
-//            int player2Card = player2Deck.removeFirst();
-//            if (player1Card == player2Card) {
-//                throw new IllegalStateException();
-//            } else if (player1Card > player2Card) {
-//                player1Deck.addLast(player1Card);
-//                player1Deck.addLast(player2Card);
-//            } else {
-//                player2Deck.addLast(player2Card);
-//                player2Deck.addLast(player1Card);
-//            }
-//        }
-//
-//        var winner = player1Deck.isEmpty() ? player2Deck : player1Deck;
-//        return calculateScore(winner);
-        return null;
+        var player1Deck = new ArrayDeque<>(player1StartingCards);
+        var player2Deck = new ArrayDeque<>(player2StartingCards);
+
+        while (!player1Deck.isEmpty() && !player2Deck.isEmpty()) {
+            int player1Card = player1Deck.removeFirst();
+            int player2Card = player2Deck.removeFirst();
+            if (player1Card == player2Card) {
+                throw new IllegalStateException();
+            } else if (player1Card > player2Card) {
+                player1Deck.addLast(player1Card);
+                player1Deck.addLast(player2Card);
+            } else {
+                player2Deck.addLast(player2Card);
+                player2Deck.addLast(player1Card);
+            }
+        }
+
+        var winner = player1Deck.isEmpty() ? player2Deck : player1Deck;
+        return calculateScore(winner);
     }
 
     static long calculateScore(Collection<Integer> winningDeck) {
@@ -56,19 +55,26 @@ public class Day22 extends Runner.Computation {
 
     @Override
     public Object computePart2() {
-        var result = recursiveCombatGame(player1StartingCards, player2StartingCards);
-        System.err.println("result.winner: " + result.winner);
+        var result = recursiveCombatGame(1, player1StartingCards, player2StartingCards);
+//        System.err.println("result.winner: " + result.winner);
         return calculateScore(result.winningDeck);
     }
 
-    static RecursiveCombatGameResult recursiveCombatGame(Collection<Integer> player1StartingCards,
-                                       Collection<Integer> player2StartingCards) {
+    private static final Integer[] DUMMY_TYPEHINT = new Integer[]{};
+
+    private int gameIDCounter = 0;
+
+    RecursiveCombatGameResult recursiveCombatGame(final int recursionLevel, Collection<Integer> player1StartingCards,
+                                                  Collection<Integer> player2StartingCards) {
+        final int gameID = ++gameIDCounter;
         var player1Deck = new ArrayDeque<>(player1StartingCards);
         var player2Deck = new ArrayDeque<>(player2StartingCards);
 
         var infiniteLoopChecker = new InfinteLoopChecker();
 
+        int roundCounter = 1;
         while (!player1Deck.isEmpty() && !player2Deck.isEmpty()) {
+//            System.err.println("Game ID: " + gameID + " Recursion level: " + recursionLevel + " Round Counter: " + roundCounter);
             if (infiniteLoopChecker.checkInfiniteLoop(player1Deck, player2Deck)) {
                 // Player 1 automatically wins this game
 //                System.err.println("Hit infinite loop case");
@@ -79,12 +85,16 @@ public class Day22 extends Runner.Computation {
             int player2Card = player2Deck.removeFirst();
 
             if (player1Card <= player1Deck.size() && player2Card <= player2Deck.size()) {
-                var subResult = recursiveCombatGame(player1Deck, player2Deck);
+                var subResult = recursiveCombatGame(recursionLevel + 1,
+                        Arrays.asList(player1Deck.toArray(DUMMY_TYPEHINT)).subList(0, player1Card),
+                        Arrays.asList(player2Deck.toArray(DUMMY_TYPEHINT)).subList(0, player2Card));
                 if (subResult.winner) {
+//                    System.err.println("Player 2 wins recursive game");
                     // player 2 winner
                     player2Deck.addLast(player2Card);
                     player2Deck.addLast(player1Card);
                 } else {
+//                    System.err.println("Player 1 wins recursive game");
                     // player 1 winner
                     player1Deck.addLast(player1Card);
                     player1Deck.addLast(player2Card);
@@ -100,6 +110,7 @@ public class Day22 extends Runner.Computation {
                     player2Deck.addLast(player1Card);
                 }
             }
+            roundCounter++;
         }
 
         if (player1Deck.isEmpty()) {
@@ -119,12 +130,12 @@ public class Day22 extends Runner.Computation {
     }
 
     private static class InfinteLoopChecker {
-        final Set<List<? extends List<Integer>>> decksStates = new HashSet<>();
+        final Set<Object> decksStates = new HashSet<>();
 
         // Returns true if an infinite loop has been detected
         boolean checkInfiniteLoop(Collection<Integer> player1Deck,
                                   Collection<Integer> player2Deck) {
-            var decksState = List.of(List.copyOf(player1Deck), List.copyOf(player2Deck));
+            var decksState = List.of(Arrays.asList(player1Deck.toArray()), Arrays.asList(player2Deck.toArray()));
             return !decksStates.add(decksState);
         }
     }
